--- a/system/AokinokoSystem/AokinokoSystem/AokinokoSystem.csproj
+++ b/system/AokinokoSystem/AokinokoSystem/AokinokoSystem.csproj
@@ -41,11 +41,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="test">
-      <HintPath>testdir\test.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="kinoko_access.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test.cs" />
   </ItemGroup>
