--- a/Recognition/KinectTest/KinectConsole/KinectConsole.csproj
+++ b/Recognition/KinectTest/KinectConsole/KinectConsole.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="kinoko_access.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
